--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
     "react": "^16.8.1",
     "react-dom": "^16.8.1",
     "react-geolocated": "^2.4.1",
+    "react-places-autocomplete": "^7.2.0",
     "react-redux": "^6.0.0",
+    "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.3",
     "react-sparklines": "^1.7.0",
+    "react-spinners": "^0.5.1",
     "redux": "^4.0.1",
     "redux-promise": "^0.6.0"
   },
